# locker-manage-system

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: default.yml
docs/plans/: 2026-03-18-locker-lottery-design.md  2026-03-18-locker-lottery-implementation.md
input/: applicant_data.csv  partner_data.csv
input/term1/: applicants.csv  partners.csv
packaging/: pyinstaller.spec
src/: config.py  data_io.py  lottery.py  main.py  pdf_generator.py  validator.py
src/locker_manage_system/: __init__.py  __main__.py  cli.py  config.py  csv_io.py  lottery.py  lottery_command.py  main.py  models.py  pdf_export.py  review_io.py  state.py  validate_command.py  validation_pipeline.py  validation_rules.py
tests/: test_cli_smoke.py  test_config.py  test_csv_io.py  test_end_to_end.py  test_lottery.py  test_lottery_command.py  test_packaging_smoke.py  test_pdf_export.py  test_state.py  test_validate_command.py  test_validation_e4.py  test_validation_pipeline.py  test_validation_rules.py
tests/fixtures/demo_state/: lockers.csv  winners.csv
