[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "locker-manage-system"
version = "0.1.0"
description = "Locker lottery management CLI"
requires-python = ">=3.10"

[project.scripts]
locker-manage-system = "locker_manage_system.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
